# pf-sarcos

./: README.md
hermesCore/: .gitignore  CMakeLists.txt  package.xml
hermesCore/3D/: 1.mtl  B_HFE.mtl  B_HN.mtl  B_HR.mtl  B_TAA.mtl  B_TFE.mtl  B_TR.mtl  L_AAA.mtl  L_AFE.mtl  L_AR.mtl  L_EB.mtl  L_HAA.mtl  L_HFE.mtl  L_HFR.mtl  L_HR.mtl  L_KFE.mtl  L_SAA.mtl  L_SFE.mtl  L_WAA.mtl  L_WFE.mtl  L_WR.mtl  Pelvis.mtl  R_AAA.mtl  R_AFE.mtl  R_AR.mtl  R_EB.mtl  R_HAA.mtl  R_HFE.mtl  R_HFR.mtl  R_HR.mtl  R_KFE.mtl  R_SAA.mtl  R_SFE.mtl  R_WAA.mtl  R_WFE.mtl  R_WR.mtl  humanoidHead.mtl  humanoidHeadLeftEye.mtl  humanoidHeadRightEye.mtl
hermesCore/3D/tmp2/: L_WAA.mtl  R_WAA.mtl
hermesCore/include/: COGDifferentiator.h  FallDetector.h  SL_user_sensor_proc_xeno.h  SL_user_task.h  base_state_estimation.h  gdc_sl_interface.h  raw_data_access.h  state_est_kin.h  valve_controller.h  valve_identifier.h
hermesCore/matlab/: computeLinkInfo.m  computeLinks_athenaReal.m  getLinkInfo_athenaReal.m  getLinkInfo_realRobot.m
hermesCore/src/: .SL_user_sensor_proc_xeno.cpp.swo  .gdc_sl_interface.cpp.swn  .gdc_sl_interface.cpp.swo  .valve_controller.cpp.swn  .valve_controller.cpp.swo  COGDifferentiator.cpp  FallDetector.cpp  SL_main.c  SL_rmain.c  SL_user_commands.c  SL_user_motor_xeno.cpp  SL_user_sensor_proc_unix.c  SL_user_sensor_proc_unix.cpp  SL_user_sensor_proc_xeno.cpp  SL_user_simulation.c  SL_user_task.c  SL_user_task.cpp  base_state_estimation.cpp  gdc_sl_interface.cpp  raw_data_access.cpp  state_est_kin.cpp  state_est_lin.cpp  valve_controller.cpp  valve_identifier.cpp
hermesFull/: .parameter_pool_vars  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
hermesFull/include/: SL_user.h  floatingBaseToolsRobotInfo.h
hermesFull/makefiles/: imakefile.unix
hermesFull/math/: Contact_GJac_declare.h  Contact_GJac_math.h  Floating_Base.h  ForDynArt_declare.h  ForDynArt_functions.h  ForDynArt_math.h  ForDynComp_declare.h  ForDynComp_functions.h  ForDynComp_math.h  GJac_declare.h  GJac_math.h  InvDynArt_declare.h  InvDynArt_functions.h  InvDynArt_math.h  InvDynNE_declare.h  InvDynNE_functions.h  InvDynNE_math.h  LEKin_contact.h  LInfo_declare.h  LInfo_math.h  OpenGL.h  PE_declare.h  PE_math.h  Prismatic_Joints.h  hermes.dyn  hermes.nb  hermes_Contact_GJac_declare.h  hermes_Contact_GJac_math.h  hermes_ForDynArt_declare.h  hermes_ForDynArt_functions.h  hermes_ForDynArt_math.h  hermes_ForDynComp_declare.h  hermes_ForDynComp_functions.h  hermes_ForDynComp_math.h  hermes_GJac_declare.h  hermes_GJac_math.h  hermes_InvDynArt_declare.h  hermes_InvDynArt_functions.h  hermes_InvDynArt_math.h  hermes_InvDynNE_declare.h  (+13 more)
hermesFull/src/: .SL_dynamics.c.swp  SL_user_common.c  SL_user_openGL.c
hermesFull/x86_64xeno/: xhermes  xmotor  xpest  xrhermes  xrmotor  xvision
hermesFullUser/: .clmcplot  .gitignore  CMakeLists.txt  Min_jerk.m  Twolink.m  Twolink_lagrange.m  U_right.mat  W.mat  W_right.mat  Wh.mat  Wk.mat  X_back.mat  X_for.mat  createFit.m  dyn_hip.mat  dyn_knee.mat  dynamics_parameters.m  dynamics_right.m  dynamics_right_2.m  dynamics_right_3.m  gdc  gdc_08_10_zero.txt  gdc_7_10_state.txt  gdc_card_08_10_posture.txt  gdc_card_09_10.txt  gdc_card_head.txt  gdc_card_state.txt  gdc_card_state_08_10.txt  gdc_state_des_tor.txt  generate_traj.m  generate_traj_8.m  generate_traj_8_back.m  generate_traj_back.m  gravity_comp.m  l_haa  l_hfe  l_hfr  load_cell.m  load_cell_slope.m  matlab.mat  (+14 more)
hermesFullUser/3D/: polaris_ev.mtl
hermesFullUser/config/: BalanceController.cf  ConfigFilesSim.cf  Contacts.cf  Gains.cf  GainsSim.cf  LinkParameters.cf  LinkParametersSim.cf  Objects.cf  ParameterPool.cf  PotsCalibration.cf  SDCGains.cf  SensorCalibration.cf  SensorFilter.cf  SensorOffset.cf  SensorOffsetSim.cf  ServoParameters.cf  ServoParametersSim.cf  Translation.cf  Translation_new.cf  Translation_old.cf  ValveController.cf  WalkingController.cf  WhichDOFs.cf  bs_est_config.cf  floatingBaseTools.cf  gdc  gdc_card_Nov7.txt  gdc_card_configuration.cf  gdc_card_configuration_full.cf  gdc_card_configuration_lower.cf  gdc_card_configuration_upper.cf  gdc_card_load.txt  gdc_card_state.txt  gdc_config_full_robot.cf  gdc_config_lower_body.cf  gdc_config_upper_body.cf  gdc_dof_config.cf  joint_angles_nominal.txt  min_max_pots.ods  min_max_pots.xls  (+1 more)
hermesFullUser/datafiles/: 14_11_04_10_2015_d01120  14_12_04_10_2015_d01121  14_13_04_10_2015_d01122  15_17_04_10_2015_d01123  15_20_04_10_2015_d01124  U8491.mat  U8492.mat  U8501.mat  U8502.mat  U8503.mat  U8511.mat  U8521.mat  U8531.mat  U8541.mat  U8542.mat  U8571.mat  U8581.mat  U8591.mat  U8601.mat  U8611.mat  U8621.mat  U8622.mat  U8631.mat  U8641.mat  U8651.mat  U8661.mat  U8671.mat  U_right.mat  Ud00958.mat  Ud00959.mat  Ud00960.mat  Ud00961.mat  Ud00962.mat  Ud00963.mat  Ud00964.mat  Ud00965.mat  Ud00966.mat  Ud00967.mat  Ud00968.mat  Ud00969.mat  (+97 more)
hermesFullUser/learn/: blob2robot.script
hermesFullUser/makefiles/: imakefile.unix
hermesFullUser/prefs/: afe  default.sine  default_script  lhaa  lhfe  lhfr  lkfe  motor_default.script  motor_sample.script  one_dof.sine  one_dof_low.sine  rhaa  rhfe  rkfe  sim_sample.script  squat.sine  t  t1  t1.txt  task_default.osc  task_default.script  task_sample.script  tb  test  test.traj  test.txt  test1  track_afe  track_afe.txt  track_afe_back  track_haa.txt  track_hfe  track_hfe.txt  track_hfe_back  track_hfe_kfe.txt  track_hfr.txt  track_kfe.txt  ts  ts1  valve_track_task
hermesFullUser/python/: frequency_response.py  load_cell_calibration.py  piston_vel.py  pots_calibration.py  test_ik_analysis.py  tests.py  velocity_comp.py
hermesFullUser/scripts/: clean_all_shared_memory.sh  clean_heap.c  clean_semaphore.c  xdbg.sh  xhermes_noxtask.sh
hermesFullUser/src/opengl/: initUserGraphics.c
hermesFullUser/src/task/tasks/: ati_sensor.cpp  calibrate_base_state_estimation.cpp  fall_task.c  ranger_task.c  (+5 more)
hermesFullUser/valveParameters/: valve_rknee.mat
pf_imu/: CMakeLists.txt  package.xml
pf_imu/include/: pf_imu.h
pf_imu/src/: .cga_imu.cpp.swp  pf_imu.cpp  rt_serial_uprog.c
pf_imu/tests/: test_pf_imu.cpp
(+16 files in other folders)
