<?xml version="1.0"?>
<package>
  <name>hermes_full_user</name>
  <version>1.0.0</version>
  <description>hermes_full_user</description>
  <author email="sschaal@usc.edu">Stefan Schaal</author>
  <maintainer email="aherzog@tuebingen.mpg.de">Alexander Herzog</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ati_ft_sensor</build_depend>
  <build_depend>cga_imu</build_depend>
  <build_depend>xenomai_ros</build_depend>
  <build_depend>hermes_full</build_depend>
  <build_depend>biped_locomotion_lib</build_depend>
  
  <run_depend>hermes_full</run_depend>
  <run_depend>biped_locomotion_lib</run_depend>
  
  <export>
  </export>
</package>
